# idasql

./: .gitignore  CMakeLists.txt  README.md  ida-plugin.json
examples/: CMakeLists.txt  example_custom_vtable.cpp  example_grep_entities.cpp  example_grep_search.cpp  example_plugin_style.cpp
prompts/: idasql_agent.md
src/cli/: CMakeLists.txt  main.cpp
src/common/: agent_settings.hpp  ai_agent.hpp  http_server.cpp  http_server.hpp  idasql_cli.hpp  idasql_commands.hpp  idasql_version.hpp  json_utils.hpp  mcp_server.cpp  mcp_server.hpp  plugin_control.hpp  session_handler.hpp
src/lib/: CMakeLists.txt
src/lib/include/idasql/: database.hpp  decompiler.hpp  disassembly.hpp  entities.hpp  entities_dbg.hpp  entities_ext.hpp  entities_search.hpp  entities_types.hpp  functions.hpp  idasql.hpp  metadata.hpp  runtime_settings.hpp  string_utils.hpp  vtable.hpp  vtable_policy.hpp
src/lib/src/: database.cpp  decompiler.cpp  entities.cpp  entities.hpp  functions.cpp  metadata_welcome.cpp  session.cpp  ui_context_provider.cpp
src/plugin/: CMakeLists.txt  main.cpp
