cmake_minimum_required(VERSION 3.20)
project(idasql VERSION 0.0.7 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Silence CMake policy warnings from dependencies
cmake_policy(SET CMP0135 NEW)                     # Use extraction time for DOWNLOAD_EXTRACT_TIMESTAMP
set(CMAKE_POLICY_DEFAULT_CMP0169 OLD CACHE STRING "" FORCE) # Allow FetchContent_Populate() in dependencies

include(FetchContent)

# Output directories (only set if building standalone)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif()

# ============================================================================
# IDA SDK (required for CLI and plugin)
# ============================================================================

include($ENV{IDASDK}/src/cmake/bootstrap.cmake)
find_package(idasdk REQUIRED)

# Make imported IDA SDK targets globally visible so sibling directories
# (e.g. additional test or example targets) can link against them.
foreach(_idasdk_imported_target idasdk::plugin idasdk::loader idasdk::procmod idasdk::idalib)
    if(TARGET ${_idasdk_imported_target})
        set_property(TARGET ${_idasdk_imported_target} PROPERTY IMPORTED_GLOBAL TRUE)
    endif()
endforeach()

# ============================================================================
# HTTP Server Support - must be set BEFORE libxsql
# ============================================================================

set(XSQL_WITH_THINCLIENT ON CACHE BOOL "" FORCE)

# idasql uses only plain HTTP (localhost); prevent cpp-httplib from opportunistically linking OpenSSL
set(HTTPLIB_USE_OPENSSL_IF_AVAILABLE OFF CACHE BOOL "" FORCE)

# ============================================================================
# libxsql dependency
# ============================================================================

if(TARGET xsql::xsql)
    # Parent project: already available from parent
    message(STATUS "idasql: Using xsql::xsql from parent project")
elseif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/../libxsql/CMakeLists.txt")
    # Parent project: sibling directory
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../libxsql ${CMAKE_CURRENT_BINARY_DIR}/libxsql)
    message(STATUS "idasql: Added libxsql from sibling directory")
else()
    # Standalone: FetchContent from GitHub
    message(STATUS "idasql: Fetching libxsql from GitHub...")
    FetchContent_Declare(libxsql
        GIT_REPOSITORY https://github.com/0xeb/libxsql.git
        GIT_TAG        main
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(libxsql)
endif()

# Include directories
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/lib/include)

# ============================================================================
# AI Agent Support (libagents - optional)
# ============================================================================

option(IDASQL_WITH_AI_AGENT "Build with AI agent support (libagents)" ON)

if(IDASQL_WITH_AI_AGENT)
    message(STATUS "idasql: Building with AI agent support via libagents")

    # Prompt header generation is required when AI agent support is enabled.
    find_package(Python3 REQUIRED COMPONENTS Interpreter)
    set(PROMPT_MD "${CMAKE_CURRENT_SOURCE_DIR}/prompts/idasql_agent.md")
    set(IDASQL_GENERATED_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated" CACHE INTERNAL "")
    set(PROMPT_HPP "${IDASQL_GENERATED_INCLUDE_DIR}/idasql_agent_prompt.hpp")

    file(MAKE_DIRECTORY ${IDASQL_GENERATED_INCLUDE_DIR})

    add_custom_command(
        OUTPUT ${PROMPT_HPP}
        COMMAND ${Python3_EXECUTABLE}
            ${CMAKE_CURRENT_SOURCE_DIR}/scripts/embed_prompt.py
            ${PROMPT_MD} ${PROMPT_HPP}
        DEPENDS ${PROMPT_MD}
        COMMENT "Checking/regenerating idasql_agent_prompt.hpp"
    )
    add_custom_target(generate_prompt DEPENDS ${PROMPT_HPP})

    # libagents build options
    set(LIBAGENTS_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(LIBAGENTS_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
    set(LIBAGENTS_BUILD_CLI OFF CACHE BOOL "" FORCE)
    set(LIBAGENTS_BUILD_COPILOT ON CACHE BOOL "" FORCE)

    # FetchContent from GitHub (with recursive submodules for fastmcpp, SDKs)
    message(STATUS "idasql: Fetching libagents from GitHub...")
    FetchContent_Declare(libagents
        GIT_REPOSITORY https://github.com/0xeb/libagents.git
        GIT_TAG        ae162192d49126da6328254aab73417d673379cc
        GIT_SUBMODULES_RECURSE TRUE
    )
    FetchContent_MakeAvailable(libagents)

    # ========================================================================
    # Build speed: enable MSVC parallel compilation for dependency targets.
    # IDA SDK's /MP only applies to ida_add_plugin/ida_add_idalib targets;
    # FetchContent dependencies compile their files sequentially without this.
    # ========================================================================
    if(MSVC)
        foreach(_dep_target fastmcpp_core copilot_sdk_cpp claude_sdk libagents)
            if(TARGET ${_dep_target})
                target_compile_options(${_dep_target} PRIVATE /MP)
            endif()
        endforeach()
    endif()

    # Build speed: merge translation units to reduce header re-parsing.
    # Note: fastmcpp_core is excluded — its server files use duplicate
    # anonymous-namespace symbols that conflict under unity builds.
    foreach(_dep_target copilot_sdk_cpp claude_sdk libagents)
        if(TARGET ${_dep_target})
            set_target_properties(${_dep_target} PROPERTIES UNITY_BUILD ON)
        endif()
    endforeach()

    # Exclude unused targets from default build (e.g. claude-sdk debug tool)
    foreach(_unused_target debug)
        if(TARGET ${_unused_target})
            set_target_properties(${_unused_target} PROPERTIES EXCLUDE_FROM_ALL TRUE)
        endif()
    endforeach()

endif()

# Add subdirectories
add_subdirectory(src)

# Examples (optional)
option(IDASQL_BUILD_EXAMPLES "Build IDASQL example programs" ON)
if(IDASQL_BUILD_EXAMPLES AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/examples")
    add_subdirectory(examples)
endif()
